Tue May 31 12:53:10 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/io/wait/test_io_wait.rb (TestIOWait#{test_nread,test_ready?,
	  test_wait}: give system some time to process the written data.

Tue May 31 12:40:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#test_open_mode): MUST release resources
	  explicitly. fix problem of r31671

Tue May 31 10:49:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_exec.c: remove conditions for clang
	  because clang version 3.0 (trunk 132165) doesn't need them.

Mon May 30 22:19:33 2011  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_signal.rb (TestSignal#test_signal_requiring): don't
	  close stderr.

Mon May 30 20:22:00 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_signal.rb (TestSignal#test_signal_requiring): small
	  but critical typo of r31642.  sorry...
	  [Bug #4798] [ruby-core:36550]

Mon May 30 15:44:16 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): as r31805, volatile it.
	  Without this, clang -O fails calculation.

	* numeric.c (fix_mul): ditto.

	* rational.c (f_imul): ditto.

Mon May 30 10:26:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_pow): make sure to assign the result of x * z.
	  If xz is optimized out, the value won't overflow.

Sun May 29 23:17:29 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_match): fix rdoc of Regexp#=~.
	  patched by Tsuyoshi Sawada. [Bug #4781]

Sun May 29 23:10:42 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/https.rb (WEBrick::HTTPRequest#parse_uri):
	  keep parse_uri as private. patched by okkez. [Bug #4773]

Sun May 29 17:53:03 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* numeric.c: add #include "internal.h" for rb_big_uminus() prototype.

Sun May 29 15:09:05 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): fix for negative value.

Sun May 29 02:16:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
